--- a/index.html
+++ b/index.html
@@ -9,13 +9,8 @@
 
   <h1>Flashcards à l'infini</h1>
 
-  <div class="card">
-    <div class="card-face card-front">
-      <!-- L'information 1 sera ici -->
-    </div>
-    <div class="card-face card-back">
-      <!-- L'information liée sera ici -->
-    </div>
+  <div id="card-box">
+    <!-- Les cartes seront injectées ici par le JavaScript -->
   </div>
 
   <button id="next-card">Carte suivante</button>
